# onvif-qt-server-client

./: .gitignore  README.md
onviflibs/gsoap/gsoap-2.8/: INSTALL.txt  LICENSE.txt  Makefile.am  Makefile.in  NOTES.txt  README.txt  aclocal.m4  changelog.html  config.guess.old  config.h.in  config.status.old  configure  configure.ac  configure.scan  gsoap++.pc.in  gsoap.pc.in  gsoap.spec  gsoapck++.pc.in  gsoapck.pc.in  gsoapssl++.pc.in  gsoapssl.pc.in  makemake
onviflibs/gsoap/gsoap-2.8/.xpce/: Geometry.cnf
onviflibs/gsoap/gsoap-2.8/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
onviflibs/gsoap/gsoap-2.8/gsoap/: Makefile.am  Makefile.in  dom.c
onviflibs/gsoap/gsoap-2.8/gsoap/Palm/: README.txt
onviflibs/gsoap/gsoap-2.8/gsoap/Symbian/: ABLD.BAT  Interop.mmp  README.txt  bld.inf  gsoapOnSymbian.doc  interop.sis  interop2.nsmap  interop2Btest.cpp  interop2Ctest.cpp  interop2test.cpp  interopMain.c  interop_all.h  interop_symbian.sisar  soapC.cpp  soapClient.cpp  soapH.h  soapStub.h  soapinterop2CProxy.h  soapinterop2Proxy.h
onviflibs/gsoap/gsoap-2.8/gsoap/TandemNonStop/: README.txt  calc.h  client.c  server.c  tandem.c  tandem.h  tandemnw.c
onviflibs/gsoap/gsoap-2.8/gsoap/VisualStudio2005/: README.html  README.txt
onviflibs/gsoap/gsoap-2.8/gsoap/VisualStudio2005/soapcpp2/: soapcpp2.sln
onviflibs/gsoap/gsoap-2.8/gsoap/VisualStudio2005/wsdl2h/: wsdl2h.sln
onviflibs/gsoap/gsoap-2.8/gsoap/WS/: LEGAL.txt  README.txt  WS-Addressing.xsd  WS-Addressing03.xsd  WS-Discovery.wsdl  WS-Enumeration.wsdl  WS-Policy12.xsd  WS-Routing.xsd  WS-SecureConversation.xsd  WS-Trust.wsdl  WS-Trust.xsd  enumeration.xsd  ws-bpel_abstract_common_base.xsd  ws-bpel_executable.xsd  ws-bpel_plnktype.xsd  ws-bpel_serviceref.xsd  ws-bpel_varprop.xsd
onviflibs/gsoap/gsoap-2.8/gsoap/custom/: README.txt  duration.c  long_double.c  long_double.h  struct_timeval.c  struct_timeval.h  struct_tm.c  struct_tm.h
onviflibs/gsoap/gsoap-2.8/gsoap/custom/.deps/: wsrmdemo-duration.Po  wsrmdemo_ssl-duration.Po  wsrmdemo_udp-duration.Po
onviflibs/gsoap/gsoap-2.8/gsoap/doc/: index.html  soapdoc2.html
onviflibs/gsoap/gsoap-2.8/gsoap/doc/dom/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/httpda/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/uddi2/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/wsa/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/wsdd/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/wsrm/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/wsse/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/wsse-lite/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/doc/xml-rpc-json/: Doxyfile
onviflibs/gsoap/gsoap-2.8/gsoap/extras/: README.txt  ckdb.c  ckdb.h  ckdbtest.c  ckdbtest.h  fault.cpp  logging.cpp  soapdefs.h
onviflibs/gsoap/gsoap-2.8/gsoap/import/: dom.h  ds.h  stl.h  wsa.h  wsa3.h  wsa4.h  wsa5.h  wsc.h  wsdx.h  wsrx.h  wsse.h  wsse11.h  wsse2.h  wst.h  wstx.h
onviflibs/gsoap/gsoap-2.8/gsoap/ios_plugin/ios_plugin/: gsoapios.h  gsoapios.m
onviflibs/gsoap/gsoap-2.8/gsoap/mod_gsoap/: README.txt
onviflibs/gsoap/gsoap-2.8/gsoap/mod_gsoap/gsoap_win/: README.txt
onviflibs/gsoap/gsoap-2.8/gsoap/plugin/: README.txt  cacerts.c  cacerts.h  httpda.c  httpda.h  httpdatest.c  httpdatest.h  httpform.c  httpform.h  httpget.c  httpgettest.c  httpgettest.h  httpmd5.c  httpmd5.h  httpmd5test.c  httpmd5test.h  httppost.c  httpposttest.h  logging.c  logging.h  md5evp.c  md5evp.h  mecevp.c  mecevp.h  mq.c  mq.h  plugin.c  plugin.h  smdevp.c  smdevp.h  wsddapi.c  wsddapi.h  wsrmapi.c  wsrmapi.h  wsse2api.c  wsse2api.h  wsseapi-lite.c  wsseapi-lite.h  wsseapi.c  wsseapi.h
onviflibs/gsoap/gsoap-2.8/gsoap/samples/: Makefile.am  Makefile.c_rules  Makefile.cpp_proxy_rules  Makefile.cpp_rules  Makefile.defines  Makefile.in  README.txt
onviflibs/gsoap/gsoap-2.8/gsoap/samples/autotest/: ChameleonIncluded.xsd  Included.xsd  LICENSE.txt  Makefile.am  Makefile.in  README.txt  RelativeIncluded.xsd  examples.wsdl  redefineschema.xsd  strict.xsd  test-patterns11.sh  test-patterns12.sh  test-self.sh
onviflibs/gsoap/gsoap-2.8/gsoap/samples/calc/: Makefile.am  Makefile.in  README.txt  calcclient.c  calcserver.c
onviflibs/gsoap/gsoap-2.8/gsoap/samples/calc++/: Makefile.am  Makefile.in  calc.h  calcserver.cpp
onviflibs/gsoap/gsoap-2.8/gsoap/samples/calc_vs2005/: README.txt  calc_vs2005.sln
onviflibs/gsoap/gsoap-2.8/gsoap/samples/calc_xcode/: README.txt  calc.nsmap  calc_xcode.1  calcclient.cpp
onviflibs/gsoap/gsoap-2.8/gsoap/samples/chaining/: Makefile.am  Makefile.in  README.txt  calcC.c  calcH.h  calcServer.c  calcServerLib.c  chaining.c  env.h  header.h  quoteC.c  quoteH.h  quoteServer.c  quoteServerLib.c
onviflibs/gsoap/gsoap-2.8/gsoap/samples/chaining++/: Makefile.am  Makefile.in  README.txt  chaining.cpp  quote.h
onviflibs/gsoap/gsoap-2.8/gsoap/samples/databinding/: Doxyfile  Makefile.am  Makefile.in  README.txt  address.cpp  address.xsd
onviflibs/gsoap/gsoap-2.8/gsoap/samples/dime/: Makefile.am  Makefile.in  README.txt  dime.h  dimeclient.cpp  dimeserver.cpp
onviflibs/gsoap/gsoap-2.8/gsoap/samples/dom/: Makefile.am  Makefile.in  README.txt  dom2calc.cpp  dom2calc.h
onviflibs/gsoap/gsoap-2.8/gsoap/samples/factory/: Makefile.am  Makefile.in  README.txt  factory.cpp  factory.h
onviflibs/gsoap/gsoap-2.8/gsoap/samples/factorytest/: Makefile.am  Makefile.in  README.txt  factorytest.cpp  factorytest.h
onviflibs/gsoap/gsoap-2.8/gsoap/src/: Make_mvc.mak  Makefile.am  Makefile.in  MakefileManual  README.txt  error2.c  error2.h  soapcpp2.h  soapcpp2_lex.l  soapcpp2_yacc.tab.h  soapcpp2_yacc.y
onviflibs/gsoap/gsoap-2.8/gsoap/uddi2/: Makefile  README.txt  cacerts.pem  example1.cpp  example2.cpp  example3.cpp  inquire_v2.cpp  inquire_v2.h  inquire_v2.wsdl  publish_v2.cpp  publish_v2.h  publish_v2.wsdl  uddi_v2.h  uddi_v2.xsd
onviflibs/gsoap/gsoap-2.8/gsoap/wsdl/: Make_mvc.mak  Makefile.am  Makefile.in  MakefileManual  README.txt  bpel.cpp  includes.h  schema.cpp  soap.h  types.cpp  types.h  wsam.h  wsdl.cpp  wsdl.h  wsp.cpp  wsp.h  wsrmp.h  wst.h  wsu.h
(+4129 files in other folders)
