####### This is the input file for automake, which will generate Makefile.in ##########
## not a GNU package. You can remove this line, if
## you have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = \
	autotest calc calc++ databinding dime dom oneway oneway++ \
	factory factorytest \
	gmt googleapi hello httpcookies lu magic mashup mashup++ \
	chaining chaining++ primes \
	mtom mtom-stream polytest roll router rss ssl template udp varparam \
	wsa wsrm wsse xml-rpc-json rest
